force-app/main/form-builder/objects/Question_Answer__c/Question_Answer__c.object-meta.xml
<CustomObject>
    <label>Question/Answer</label>
    <nameField>
        <displayFormat>Q/A-{0000}</displayFormat>
        <label>Question/Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions/Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>