force-app/main/form-builder/objects/Question_Answer__c/fields/Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Form_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Response</label>
    <referenceTo>Form_Response__c</referenceTo>
    <relationshipLabel>Questions/Answers</relationshipLabel>
    <relationshipName>Questions_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>