force-app/main/form-builder/objects/Question_Answer__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >Order in which the question answer should be displayed. Copied from Question_Catalog__c.Order__c when the answer is saved.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>