force-app/main/form-builder/objects/Question_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Shows the text of the question</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>