force-app/main/form-builder/objects/Question_Answer__c/fields/Question_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Question_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Question Catalog</description>
    <label>Question Catalog</label>
    <referenceTo>Question_Catalog__c</referenceTo>
    <relationshipLabel>Questions/Answers</relationshipLabel>
    <relationshipName>Questions_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>